
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="org.tvolkov.rvc.app.MainActivity">
    <TextView
        android:id="@+id/main_connected"
        android:text="@string/main_activity_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/main_status"
        android:text="@string/main_activity_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_connected"/>
    <TextView
        android:id="@+id/main_current"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_current"
        android:layout_below="@+id/main_status"/>
    <Button
        android:id="@+id/main_playback_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_current"
        android:text="@string/main_activity_playback_text"/>
    <LinearLayout
        android:id="@+id/main_prevnext_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_playback_button"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_prev"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_playback_prev"/>
        <Button
            android:id="@+id/main_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_playback_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_audiotrack_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_prevnext_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_prev_audiotrack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_audio_prev"/>
        <Button
            android:id="@+id/main_next_audiotrack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_audio_next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_volume_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_audiotrack_layout"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_volume_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_volume_up"/>
        <Button
            android:id="@+id/main_volume_down"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_volume_down"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/main_shutdown_pc_on_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_shutdown_pc_on_stop"
        android:layout_below="@+id/main_volume_layout"/>

</RelativeLayout>